<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="732dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/digite_un_nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/teal_700"
        android:textColorHint="#00838F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/digite_un_apellido"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/teal_700"
        android:textColorHint="#00838F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/genero"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center|start"
        android:text="@string/genero"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/string_nacimiento"
        android:gravity="center|end"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/genero"
        app:layout_constraintTop_toBottomOf="@+id/surname" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center|start"
        android:text="@string/nacimiento"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/genero"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genero" />


    <TextView
        android:id="@+id/edDatePicker"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:clickable="false"
        android:focusable="false"
        android:gravity="center|start"
        android:hint="@string/etDate"
        android:inputType="date"
        android:textColor="@color/teal_700"
        android:textColorHint="#757575"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/etGustaPro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center|start"
        android:text="@string/gustaPro"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etGustaPro"
        app:layout_constraintTop_toBottomOf="@+id/edDatePicker">

        <RadioButton
            android:id="@+id/r_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/rbYes"
            android:textColor="@color/teal_700"
            app:layout_constraintEnd_toStartOf="@+id/r_no"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/etGustaPro"
            app:layout_constraintTop_toBottomOf="@+id/edDatePicker" />

        <RadioButton
            android:id="@+id/r_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/rbNo"
            android:textColor="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/r_yes"
            app:layout_constraintTop_toBottomOf="@+id/edDatePicker" />


    </RadioGroup>

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center|start"
        android:text="@string/tvLanguage"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/cb_java"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGustaPro" />

    <CheckBox
        android:id="@+id/cb_java"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="Java"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/cb_js"
        app:layout_constraintEnd_toStartOf="@+id/cb_python"
        app:layout_constraintStart_toEndOf="@+id/tvLanguage"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/cb_python"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="Python"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cb_java"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/cb_js"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="JS"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/cb_ccplus"
        app:layout_constraintEnd_toStartOf="@+id/cb_goland"
        app:layout_constraintStart_toStartOf="@+id/cb_java"
        app:layout_constraintTop_toBottomOf="@+id/cb_java" />

    <CheckBox
        android:id="@+id/cb_goland"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:text="Go Land"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cb_python"
        app:layout_constraintTop_toBottomOf="@+id/cb_python" />

    <CheckBox
        android:id="@+id/cb_ccplus"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="C/C++"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toStartOf="@+id/cb_csharp"
        app:layout_constraintStart_toStartOf="@+id/cb_java"
        app:layout_constraintTop_toBottomOf="@+id/cb_js" />

    <CheckBox
        android:id="@+id/cb_csharp"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:text="C#"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/cb_python"
        app:layout_constraintTop_toBottomOf="@+id/cb_goland" />

    <Button
        android:id="@+id/bSend"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bClear"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/bSend" />


</androidx.constraintlayout.widget.ConstraintLayout>